<resources>
    <string name="app_name">Acervo</string>
    <string name="livro">Livro</string>
    <string name="disco">Disco</string>
    <string name="pintura">Pintura</string>
    <string name="titulo">Titulo</string>
    <string name="inicio">App Acervo</string>
    <string name="codigo">Codigo</string>
    <string name="ano">Ano</string>
    <string name="numP">Prateleira</string>
    <string name="edicao">Edicao</string>
    <string name="hora">Hora</string>
    <string name="minutos">Min</string>
    <string name="segundos">Seg</string>
    <string name="duracao">Duracao</string>
    <string name="artista">Artista</string>
    <string name="inserir">Inserir</string>
    <string name="buscar">Buscar</string>
    <string name="excluir">Excluir</string>
    <string name="atualizar">Atualizar</string>
    <string name="listar">Listar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
