<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiscoFragment">

    <EditText
        android:id="@+id/etCodigoD"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscarD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="30dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTituloD"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/titulo"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigoD" />

    <EditText
        android:id="@+id/etDuracao"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/duracao"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="@+id/etTituloD"
        app:layout_constraintTop_toBottomOf="@+id/etTituloD" />

    <EditText
        android:id="@+id/etAnoD"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/ano"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDuracao" />

    <EditText
        android:id="@+id/etPratD"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/numP"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/etAnoD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etDuracao"
        app:layout_constraintTop_toTopOf="@+id/etAnoD" />

    <Button
        android:id="@+id/btnExcluirD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="59dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnoD" />

    <Button
        android:id="@+id/btnInserirD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="29dp"
        android:text="@string/inserir"
        app:layout_constraintBottom_toTopOf="@+id/btnListarD"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAtualizarD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="22dp"
        android:text="@string/atualizar"
        app:layout_constraintStart_toStartOf="@+id/tvSaidaD"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluirD" />

    <Button
        android:id="@+id/btnListarD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="2dp"
        android:text="@string/listar"
        app:layout_constraintBottom_toTopOf="@+id/tvSaidaD"
        app:layout_constraintEnd_toEndOf="@+id/tvSaidaD" />

    <TextView
        android:id="@+id/tvSaidaD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAtualizarD" />

</androidx.constraintlayout.widget.ConstraintLayout>
