<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LivroFragment">

    <EditText
        android:id="@+id/etCodigoL"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscarL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="32dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTituloL"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/titulo"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigoL" />

    <EditText
        android:id="@+id/etEdicao"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/edicao"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTituloL" />

    <EditText
        android:id="@+id/etAnoL"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="71dp"
        android:ems="10"
        android:hint="@string/ano"
        android:inputType="number"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@+id/btnExcluirL"
        app:layout_constraintEnd_toEndOf="@+id/btnExcluirL"
        app:layout_constraintStart_toStartOf="@+id/btnExcluirL"
        app:layout_constraintTop_toTopOf="@+id/etEdicao" />

    <EditText
        android:id="@+id/etPratL"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="66dp"
        android:ems="10"
        android:hint="@string/numP"
        android:inputType="number"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@+id/btnInserirL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etEdicao" />

    <Button
        android:id="@+id/btnExcluirL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:text="@string/excluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInserirL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="31dp"
        android:text="@string/inserir"
        app:layout_constraintBottom_toTopOf="@+id/btnListarL"
        app:layout_constraintStart_toStartOf="@+id/etPratL" />

    <Button
        android:id="@+id/btnAtualizarL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="24dp"
        android:text="@string/atualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluirL" />

    <Button
        android:id="@+id/btnListarL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/listar"
        app:layout_constraintBottom_toBottomOf="@+id/btnAtualizarL"
        app:layout_constraintStart_toStartOf="@+id/btnInserirL"
        app:layout_constraintTop_toTopOf="@+id/btnAtualizarL" />

    <TextView
        android:id="@+id/tvSaidaL"
        android:layout_width="408dp"
        android:layout_height="214dp"
        android:layout_marginTop="52dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAtualizarL" />

</androidx.constraintlayout.widget.ConstraintLayout>
